@@ -2,6 +2,10 @@ GNU diffutils NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** Bug fixes
+
+  diff no longer mishandles line numbers exceeding 2**31 on Mingw-w64.
+
 
 * Noteworthy changes in release 3.5 (2016-08-20) [stable]
 
